src/tests/Loader/classloader/generics/Instantiation/Negative/abstract06.ilproj
<Project Sdk="Microsoft.NET.Sdk.IL">
  <PropertyGroup>
    <!-- Needed for CrossGenTest -->
    <RequiresProcessIsolation>true</RequiresProcessIsolation>
    <CLRTestPriority>1</CLRTestPriority>
    
    <!-- Crossgen is not intended to serve as an IL verifier, and is not designed to provide error semantics on bad input. -->
    <CrossGenTest>false</CrossGenTest>
  </PropertyGroup>
  <ItemGroup>
    <Compile Include="abstract06.il" />
  </ItemGroup>
</Project>
